hphp/test/zend/bad/ext/spl/tests/bug54281.php.expectf

Fatal error: %s
Stack trace:
#0 %s/bug54281.php(8): RecursiveIteratorIterator->rewind()
#1 {main}
  thrown in %s/bug54281.php on line 8